# CalendarAI_PRO

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  tmp_check.py  wsgi.py
.github/workflows/: main.yml
app/: __init__.py  config.py  extensions.py  scheduler.py
app/ai/: orchestrator.py  schemas.py
app/ai/tools/: __init__.py  cancel_event.py  create_event.py  list_events.py  update_event.py
app/blueprints/agenda/: __init__.py  routes.py
app/blueprints/agenda/templates/agenda/: calendar.html
app/blueprints/auth/: __init__.py  routes.py
app/blueprints/auth/templates/auth/: login.html  privacy.html  terms.html
app/blueprints/chat/: __init__.py  routes.py
app/blueprints/chat/templates/chat/: chat.html
app/models/: __init__.py  calendar_sync.py  chat_message.py  event.py  user.py
app/repositories/: __init__.py  event_repository.py  user_repository.py
app/services/: auth_service.py  email_service.py  google_calendar_service.py  scheduling_service.py
app/static/css/: style.css
app/static/js/: calendar.js  chat.js
app/templates/: base.html  shell.html
docker/: entrypoint.sh
migrations/: env.py
migrations/versions/: 9bbf022d1813_add_notification_sent_to_events.py  d0a9494ac2eb_add_chat_messages_table.py  f6d8a37e1b5c_initial_schema.py
prompts/: system.md
tests/: conftest.py  test_auth.py  test_event_crud.py  test_google_calendar_sync.py  test_scheduling_service.py  test_user_isolation.py
